# exbooks

./: .env.example  .gitignore  conftest.py  docker-compose.yml  manage.py  pyproject.toml  weekly_report.md
accounts/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0003_add_birth_date.py  0004_userprofile_overdue_count_and_more.py  0005_add_appeal_model.py  0006_add_violation_model.py  0007_add_trust_score.py  0008_alter_appeal_status_alter_userprofile_trust_level_and_more.py  0009_remove_userprofile_trust_level.py  0010_trustlevelconfig.py  0011_userprofile_trust_level_protected_since.py  (+1 more)
ai/: models.py  urls.py  views.py
books/: admin.py  apps.py  forms.py  urls.py  views.py
core/: constants.py  exceptions.py  models.py  views.py
deals/: admin.py  apps.py  forms.py  rules.py  urls.py  views.py
deals/models/: deal.py  (+6 more)
docs/: 0328_commit_report_2521794_to_e88abf.md  HTMX_PATTERNS_DISCOVERED.md  acquire.md  class-diagram.md  er-diagram.md  exbook_commit_report_20260407_batch1.md  exbook_commit_report_20260407_batch2.md  google-oauth-setup.md  schema.md  seed.md  testing_strategy.md  手機版 UX 分析報告.md
exbook/: asgi.py  scheduler.py  settings.py  test_settings.py  urls.py  wsgi.py
scripts/: entropy_janitor.py  qa_test_book_selection.py  qa_verify_book_set_create.py
static/: manifest.json  sw.js
templates/: _bottom_nav.html  _search_modal.html  _sidebar.html  base.html  offline.html
tests/: conftest.py  factories.py  test_playwright_setup.py  test_redis_isbn_cache.py
(+196 files in other folders)
