[project]
name = "exbook"
version = "0.1.0"
description = "共享書籍平臺 — 公益性質的去中心化書籍共享社群"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "mysqlclient>=2.2",
    "pillow>=11.0",
    "python-dotenv>=1.0",
    "django-allauth>=65.0",
    "django-crispy-forms>=2.0",
    "crispy-tailwind>=1.0",
    "requests>=2.32",
    "django-fsm-2>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["exbook*", "accounts*", "books*", "deals*", "core*", "config*", "tests*"]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar",
    "djlint",
    "ruff",
]
test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-playwright>=0.5.0",
    "factory-boy>=3.3",
    "faker>=30.0",
]
prod = [
    "gunicorn>=23.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "exbook.test_settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]


[tool.djlint]
profile = "django"